# suckless-software

./: .gitignore  README.org  install
dmenu-5.0/: Makefile.am  configure.ac
dwm-6.2/: Makefile.am  config.h  configure.ac
m4/: np.m4
st-0.8.4/: Makefile.am  config.h  configure.ac
