AC_PREREQ([2.71])
AC_INIT([dmenu], [5.0])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([dmenu.c])

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_MACRO_DIRS([../m4])
NP_CHECK_LIB_FATAL([FONTCONFIG], [fontconfig])
NP_CHECK_LIB_FATAL([X11], [x11])
NP_CHECK_LIB_FATAL([XFT], [xft])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
